welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
var vert:Boolean = false
vert:Boolean = {
	
}
def isFacingTrail():Boolean = {
  

  if (estFaceMur=false) {
  		avance()
  		if (getCouleurSol() == Color.green) {vert =  true}
		else {vert = false};
		recule()
  if (vert==true) {return true; }
  
  
  
  else {return false}
  	
  }
  else {return false}
}        
